[workspace]
members = ["bevy_mod_n2dmap", "n2dmap", "n2dmap_cli"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.11.0-dev", default-features = false }
image = { version = "0.24.6", default-features = false }
fft2d = "0.1.0"
nalgebra = { version = "0.29.0", default-features = false, features = ["std"] }
clap = "4.2.2"
